# k8s-python-slackbot

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  echobot.py  manifest.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: release-drafter.yml
src/: echobot.py
