[tool.poetry]
name = "k8s-python-slackbot"
version = "0.1.1"
description = "Slack echobot example using Kubernetes."
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/staticdev/k8s-python-slackbot"
homepage = "https://github.com/staticdev/k8s-python-slackbot"

[tool.poetry.dependencies]
python = "^3.8"
slackclient = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
