[tool.poetry]
name = "k8s-python-slackbot"
version = "0.1.2"
description = "Slack echobot example using Kubernetes."
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/staticdev/k8s-python-slackbot"
homepage = "https://github.com/staticdev/k8s-python-slackbot"

[tool.poetry.dependencies]
python = "^3.8"
slackclient = "^2.9.3"

[tool.poetry.dev-dependencies]
reorder-python-imports = "^2.3.6"
black = "^20.8b1"
pre-commit-hooks = "^3.3.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
